--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
+                        <li><a href="#">Services</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
@@ -33,6 +34,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
