--- a/home.html
+++ b/home.html
@@ -30,12 +30,12 @@
                     <i class="bi bi-list"></i>
                 </div>
             </div>
-            <div id="navbar" class="ul__phone">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
+            <div id="navbar" class="ul__phone navv">
+                <ul class="navv">
+                    <li class="navv"><a class="navv" href="#">Home</a></li>
+                    <li class="navv"><a class="navv" href="#">About</a></li>
+                    <li class="navv"><a class="navv" href="#">Services</a></li>
+                    <li class="navv"><a class="navv" href="#">Contact</a></li>
                 </ul>
             </div>
         </div>
