--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
             <div class="nav__app">
                 <div class="f__logo">
                     <div class="logo">
-                        <img src="./assets/img/black-logo.png" alt="">
+                        <img src="./assets/img/index-logo.png" alt="">
                     </div>
                     <p>My Time</p>
                 </div>
@@ -25,6 +25,9 @@
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
+                    <a href="">
+                        <button>Login</button>
+                    </a>
                 </div>
                 <div id="show-navbar" class="icon__nav">
                     <i class="bi bi-list"></i>
