fixed title size

--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
                         <li><a href="#">About</a></li>
                         <li><a href="#">Services</a></li>
                         <li><a href="#">Contact</a></li>
+                        <li><a href="#">New shop-Owner </a></li>
                     </ul>
                     <a href="">
                         <button>Login</button>
@@ -39,6 +40,7 @@
                     <li class="navv"><a class="navv" href="#">About</a></li>
                     <li class="navv"><a class="navv" href="#">Services</a></li>
                     <li class="navv"><a class="navv" href="#">Contact</a></li>
+                    <li class="navv"><a class="navv" href="#">New shop-Owner </a></li>
                 </ul>
             </div>
         </div>
